Ajout arial-label

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 					<nav class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav black-20">
 							<li>
-								<a href="#">Accueil</a>
-								<a href="contacts-webdesign.html" title="Formulaire de contact">Nous contacter...</a>
+								<a arial-label="Retour accueil" href="#">Accueil</a>
+								<a arial-label="Formulaire de contact" href="contacts-webdesign.html" title="Formulaire de contact">Nous contacter...</a>
 							</li>
 						</ul>
 					</nav>
@@ -83,7 +83,7 @@
 
 					</div>
 					<nav class="text-center">
-						<a href="contacts-webdesign.html" title="Formulaire de contact"
+						<a arial-label="Formulaire de contact" href="contacts-webdesign.html" title="Formulaire de contact"
 							class="btn btn-lg btn-clean btn-rd btn-atomic-tangerine	cta-hero-btn">Contact</a>
 					</nav>
 				</div>
@@ -170,7 +170,7 @@
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
 							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
 							qui seront facilement trouvable sur les moteurs de recherche.<br><br>
-							<h3><a class="ltc-white bold-link" href="contacts-webdesign.html" title="Formulaire de contact">
+							<h3><a arial-label="Formulaire de contact" class="ltc-white bold-link" href="contacts-webdesign.html" title="Formulaire de contact">
 								Contactez notre équipe</a></h3>
 							</nav>
 					</div>
@@ -256,7 +256,7 @@
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
 					<nav class="text-center">
-						<a href="contacts-webdesign.html" title="Formulaire de contact"
+						<a arial-label="Formulaire de contact" href="contacts-webdesign.html" title="Formulaire de contact"
 							class="btn btn-lg btn-clean btn-rd btn-atomic-tangerine	cta-hero-btn">Contact</a>
 					</nav>
 				</div>
