--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -58,8 +58,8 @@
 						<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 							<ul class="site-navigation nav navbar-nav black-20">
 								<li>
-									<a arial-label="Retour accueil" href="index.html">Accueil</a>
-									<a arial-label="Contact" href="contacts-webdesign.html" title="Formulaire de contact">Nous
+									<a aria-label="Retour accueil" href="index.html">Accueil</a>
+									<a aria-label="Contact" href="contacts-webdesign.html" title="Formulaire de contact">Nous
 										contacter...</a>
 								</li>
 							</ul>
@@ -98,15 +98,15 @@
 						<form>
 							<div class="form-group">
 								<label>Nom</label>
-								<input arial-label="Saisie Nom" id="name" class="form-control" required />
+								<input aria-label="Saisie Nom" id="name" class="form-control" required />
 							</div>
 							<div class="form-group">
 								<label>Adresse email</label>
-								<input arial-label="Saisie adresse email" id="email" class="form-control" type="email" required />
+								<input aria-label="Saisie adresse email" id="email" class="form-control" type="email" required />
 							</div>
 							<div class="form-group">
 								<label>Comment nous avez-vous connu ?</label>
-								<input arial-label="Indication de la raison du contact" class="form-control" type="email" required id="input_504" />
+								<input aria-label="Indication de la raison du contact" class="form-control" type="email" required id="input_504" />
 							</div>
 
 						</form>
@@ -116,7 +116,7 @@
 							<div class="form-group">
 								<label>Brief de votre projet (Ajoutez autant de détails que nécessaire)<br></label>
 								<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
-								<button arial-label="Envoi du formulaire" class="bloc-button btn-d btn-lg btn-block cta-hero btn-atomic-tangerine"
+								<button aria-label="Envoi du formulaire" class="bloc-button btn-d btn-lg btn-block cta-hero btn-atomic-tangerine"
 									type="submit">
 									Envoyer
 								</button>
@@ -150,25 +150,25 @@
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a arial-label="Twitter" class="social" href="index.html"><span
+								<a aria-label="Twitter" class="social" href="index.html"><span
 										class="fa fa-twitter icon-md black"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a arial-label="Facebook" class="social" href="index.html"><span
+								<a aria-label="Facebook" class="social" href="index.html"><span
 										class="fa fa-facebook icon-md black"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a arial-label="Sport" class="social" href="index.html"><span
+								<a aria-label="Sport" class="social" href="index.html"><span
 										class="fa fa-dribbble icon-md black"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a arial-label="Instagram" class="social" href="index.html"><span
+								<a aria-label="Instagram" class="social" href="index.html"><span
 										class="fa fa-instagram icon-md black"></span></a>
 							</div>
 						</div>
