sppression textarea aprés label

--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -115,7 +115,7 @@
 						<form>
 							<div class="form-group">
 								<label>Brief de votre projet (Ajoutez autant de détails que nécessaire)<br></label>
-								<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+								<!-- <textarea id="message" class="form-control" rows="4" cols="50" required></textarea> -->
 								<button aria-label="Envoi du formulaire" class="bloc-button btn-d btn-lg btn-block cta-hero btn-atomic-tangerine"
 									type="submit">
 									Envoyer
