--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description"
 		content="Entreprise de design et développement site web à Lyon.Une équipe d'experts pour vous assister en stratégie et illustrations pour vous aider à votre réferecement.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<link rel="canonial" href="https://pascald18.github.io/P4_02_code_source/index.html">
+	<link rel="canonical" href="https://pascald18.github.io/P4_02_code_source/">
 	<meta name="robots" content="index, follow">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
