--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					<div class="text-center">
 						<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 					</div>
-					<h2>class="text-center">
+					<h2 class="text-center">
 						Web design
 					</h2>
 					<h3 class="text-center ">
