--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/> -->
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Chouette agence - Entreprise de développement web à lyon.</title>
 	<script src="./js/jquery-2.1.0.min.js" defer></script>
@@ -117,7 +118,7 @@
 						<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 					</div>
 					<h2 class="text-center">
-						&nbsp;Stratégie
+						Stratégie
 					</h2>
 					<h3 class="text-center ">
 						Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre
