--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -11,9 +11,14 @@
 	<link rel="canonical" href="https://pascald18.github.io/P4_02_code_source/">
 	<meta name="robots" content="index, follow">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"> -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+	<!-- <link rel="stylesheet" type="text/css" href="./css/font-awesome.css"> -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+	<link rel="preconnect" href="https://fonts.googleapis.com" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Chouette agence - Entreprise de développement web à lyon.</title>
 	<script src="./js/jquery-2.1.0.min.js" defer></script>
@@ -59,7 +64,8 @@
 							<ul class="site-navigation nav navbar-nav black-20">
 								<li>
 									<a aria-label="Retour accueil" href="index.html">Accueil</a>
-									<a aria-label="Contact" href="contacts-webdesign.html" title="Formulaire de contact">Nous
+									<a aria-label="Contact" href="contacts-webdesign.html"
+										title="Formulaire de contact">Nous
 										contacter...</a>
 								</li>
 							</ul>
@@ -102,11 +108,13 @@
 							</div>
 							<div class="form-group">
 								<label>Adresse email</label>
-								<input aria-label="Saisie adresse email" id="email" class="form-control" type="email" required />
+								<input aria-label="Saisie adresse email" id="email" class="form-control" type="email"
+									required />
 							</div>
 							<div class="form-group">
 								<label>Comment nous avez-vous connu ?</label>
-								<input aria-label="Indication de la raison du contact" class="form-control" type="email" required id="input_504" />
+								<input aria-label="Indication de la raison du contact" class="form-control" type="email"
+									required id="input_504" />
 							</div>
 
 						</form>
@@ -116,7 +124,8 @@
 							<div class="form-group">
 								<label>Brief de votre projet (Ajoutez autant de détails que nécessaire)<br></label>
 								<!-- <textarea id="message" class="form-control" rows="4" cols="50" required></textarea> -->
-								<button aria-label="Envoi du formulaire" class="bloc-button btn-d btn-lg btn-block cta-hero btn-atomic-tangerine"
+								<button aria-label="Envoi du formulaire"
+									class="bloc-button btn-d btn-lg btn-block cta-hero btn-atomic-tangerine"
 									type="submit">
 									Envoyer
 								</button>
@@ -156,8 +165,12 @@
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a aria-label="Facebook" class="social" href="index.html"><span
-										class="fa fa-facebook icon-md black"></span></a>
+								
+								<a aria-label="Facebook" class="social" href="index.html">
+									<i class="fa-facebook icon-md black"></i>
+									<i class="fas fa-map-marker-alt icon-md black"></i>
+									<!-- <span class="fa fa-facebook icon-md black"></span> -->
+									</a>
 							</div>
 						</div>
 						<div class="col-sm-3">
