--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/> -->
+	<!-- <link rel="stylesheet" type="text/css" href="./css/font-awesome.css"> -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+	<link rel="preconnect" href="https://fonts.googleapis.com" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Chouette agence - Entreprise de développement web à lyon.</title>
 	<script src="./js/jquery-2.1.0.min.js" defer></script>
