--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -159,36 +159,43 @@
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a aria-label="Twitter" class="social" href="index.html"><span
-										class="fa fa-twitter icon-md black"></span></a>
+								<a aria-label="Twitter" class="social" href="index.html">
+									<i class="fas fa-dove icon-md black"></i>
+									<!-- <span class="fa fa-twitter icon-md black"></span> -->
+								</a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
 								
 								<a aria-label="Facebook" class="social" href="index.html">
-									<i class="fa-facebook icon-md black"></i>
-									<i class="fas fa-map-marker-alt icon-md black"></i>
+									<i class="fab fa-facebook-f icon-md black"></i>
 									<!-- <span class="fa fa-facebook icon-md black"></span> -->
 									</a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a aria-label="Sport" class="social" href="index.html"><span
-										class="fa fa-dribbble icon-md black"></span></a>
+								<a aria-label="Sport" class="social" href="index.html">
+									<i class="fas fa-basketball-ball icon-md black"></i>
+									<!-- <span class="fa fa-dribbble icon-md black"></span> -->
+								</a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a aria-label="Instagram" class="social" href="index.html"><span
-										class="fa fa-instagram icon-md black"></span></a>
+								<a aria-label="Instagram" class="social" href="index.html">
+									<i class="fab fa-instagram icon-md black"></i>
+									<!-- <span class="fa fa-instagram icon-md black"></span> -->
+								</a>
 							</div>
 						</div>
 					</div>
 					<!-- ScrollToTop Button -->
-					<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span
-							class="fa fa-chevron-up"></span></a>
+					<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')">
+						<i class="fas fa-chevron-double-up"></i>
+						<!-- <span class="fa fa-chevron-up"></span> -->
+					</a>
 					<!-- ScrollToTop Button END-->
 				</div>
 				<!--</div>
