--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 	<link rel="canonical" href="https://pascald18.github.io/P4_02_code_source/">
 	<meta name="robots" content="index, follow">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"> -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	<!-- <link rel="stylesheet" type="text/css" href="./css/font-awesome.css"> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
@@ -25,7 +27,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/jqBootstrapValidation.js" defer></script>
 	<script src="./js/gmaps.min.js" defer></script>
-	
+
 
 
 	<!-- Google Analytics -->
@@ -51,7 +53,7 @@
 				<div class="navbar row">
 					<nav class="navbar-header">
 						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
-								alt="logo agence" height="40"/></a>
+								alt="logo agence" height="40" /></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
@@ -62,7 +64,8 @@
 						<ul class="site-navigation nav navbar-nav black-20">
 							<li>
 								<a aria-label="Retour accueil" href="#">Accueil</a>
-								<a aria-label="Formulaire de contact" href="contacts-webdesign.html" title="Formulaire de contact">Nous contacter...</a>
+								<a aria-label="Formulaire de contact" href="contacts-webdesign.html"
+									title="Formulaire de contact">Nous contacter...</a>
 							</li>
 						</ul>
 					</nav>
@@ -173,9 +176,10 @@
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
 							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
 							qui seront facilement trouvable sur les moteurs de recherche.<br><br>
-							<h3><a aria-label="Formulaire de contact" class="ltc-white bold-link" href="contacts-webdesign.html" title="Formulaire de contact">
-								Contactez notre équipe</a></h3>
-							</nav>
+							<h3><a aria-label="Formulaire de contact" class="ltc-white bold-link"
+									href="contacts-webdesign.html" title="Formulaire de contact">
+									Contactez notre équipe</a></h3>
+						</nav>
 					</div>
 				</div>
 			</div>
@@ -203,7 +207,7 @@
 							Refonte d'un site web pour un journal local
 						</h3>
 						<h4 class="text-center">
-							Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.						
+							Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 						</h4>
 					</div>
 					<div class="col-sm-6">
@@ -259,7 +263,8 @@
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
 					<nav class="text-center">
-						<a aria-label="Formulaire de contact" href="contacts-webdesign.html" title="Formulaire de contact"
+						<a aria-label="Formulaire de contact" href="contacts-webdesign.html"
+							title="Formulaire de contact"
 							class="btn btn-lg btn-clean btn-rd btn-atomic-tangerine	cta-hero-btn">Contact</a>
 					</nav>
 				</div>
@@ -278,22 +283,34 @@
 			<div class="row row-no-gutters social">
 				<div class="col-sm-3">
 					<div class="text-center">
-						<a aria-label="Twitter" class="social" href="index.html"><span class="fa fa-twitter icon-md black"></span></a>
+						<a aria-label="Twitter" class="social" href="index.html">
+							<i class="fas fa-dove icon-md black"></i>
+							<!-- <span class="fa fa-twitter icon-md black"></span> -->
+						</a>
 					</div>
 				</div>
 				<div class="col-sm-3">
 					<div class="text-center">
-						<a aria-label="Facebook" class="social" href="index.html"><span class="fa fa-facebook icon-md black"></span></a>
+						<a aria-label="Facebook" class="social" href="index.html">
+							<i class="fab fa-facebook-f icon-md black"></i>
+							<!--<span class="fa fa-facebook icon-md black"></span> -->
+						</a>
 					</div>
 				</div>
 				<div class="col-sm-3">
 					<div class="text-center">
-						<a aria-label="Sport" class="social" href="index.html"><span class="fa fa-dribbble icon-md black"></span></a>
+						<a aria-label="Sport" class="social" href="index.html">
+							<i class="fas fa-basketball-ball icon-md black"></i>
+							<!-- <span class="fa fa-dribbble icon-md black"></span> -->
+						</a>
 					</div>
 				</div>
 				<div class="col-sm-3">
 					<div class="text-center">
-						<a aria-label= "Instagram" class="social" href="index.html"><span class="fa fa-instagram icon-md black"></span></a>
+						<a aria-label="Instagram" class="social" href="index.html">
+							<i class="fab fa-instagram icon-md black"></i>
+							<!-- <span class="fa fa-instagram icon-md black"></span> -->
+						</a>
 					</div>
 				</div>
 			</div>
