correction fonts footer

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 		<div class="container bloc-sm">
 			<!-- <div class="row"> -->
 			<!-- <div class="col-sm-12"> -->
-			<h2 class="text-center black">
+			<h2 class="text-center black-20-g">
 				La chouette agence - Agence web basée à Lyon.<br>
 			</h2>
 			<div class="row row-no-gutters social">
@@ -312,8 +312,8 @@
 					</div>
 				</div>
 			</div>
-			<div class="row black-25">
-				<nav class="col-sm-4">
+			<div class="row">
+				<nav class="col-sm-4 black-20-g">
 					Partenaires
 					<ul class="black-20">
 						<li><a href="#">voiture.com</a></li>
@@ -322,7 +322,7 @@
 						<li><a href="#">immobilierseo.com</a></li>
 					</ul>
 				</nav>
-				<div class="col-sm-4">
+				<nav class="col-sm-4 black-20-g">
 					Annuaires liste 1
 					<ul class="black-20">
 						<li><a href="#">annuaireagence.com</a></li>
@@ -335,8 +335,8 @@
 						<li><a href="#">meilleuresagencesparis.com</a></li>
 						<li><a href="#">listeseo.com</a></li>
 					</ul>
-				</div>
-				<div class="col-sm-4">
+				</nav>
+				<nav class="col-sm-4 black-20-g">
 					Annuaires liste 2
 					<ul class="black-20">
 						<li><a href="#">betterseo.com</a></li>
@@ -349,7 +349,7 @@
 						<li><a href="#">remontersurgoogle.com</a></li>
 						<li><a href="#">vraiseofiable.com</a></li>
 					</ul>
-				</div>
+				</nav>
 			</div>
 			<!-- </div> -->
 			<!-- </div> -->
