--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 			<div class="row row-no-gutters social">
 				<div class="col-sm-3">
 					<div class="text-center">
-						<a aria-label="Twitter" class="social" href="index.html">
+						<a aria-label="Twitter" class="social" href="#">
 							<i class="fas fa-dove icon-md black"></i>
 							<!-- <span class="fa fa-twitter icon-md black"></span> -->
 						</a>
@@ -289,7 +289,7 @@
 				</div>
 				<div class="col-sm-3">
 					<div class="text-center">
-						<a aria-label="Facebook" class="social" href="index.html">
+						<a aria-label="Facebook" class="social" href="#">
 							<i class="fab fa-facebook-f icon-md black"></i>
 							<!--<span class="fa fa-facebook icon-md black"></span> -->
 						</a>
@@ -297,7 +297,7 @@
 				</div>
 				<div class="col-sm-3">
 					<div class="text-center">
-						<a aria-label="Sport" class="social" href="index.html">
+						<a aria-label="Sport" class="social" href="#">
 							<i class="fas fa-basketball-ball icon-md black"></i>
 							<!-- <span class="fa fa-dribbble icon-md black"></span> -->
 						</a>
@@ -305,7 +305,7 @@
 				</div>
 				<div class="col-sm-3">
 					<div class="text-center">
-						<a aria-label="Instagram" class="social" href="index.html">
+						<a aria-label="Instagram" class="social" href="#">
 							<i class="fab fa-instagram icon-md black"></i>
 							<!-- <span class="fa fa-instagram icon-md black"></span> -->
 						</a>
