--- Auto-Git Commit ---

--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -120,8 +120,9 @@
 					<aside class="bloc7-2">
 						<form>
 							<div class="form-group">
-								<label>Brief de votre projet (Ajoutez autant de détails que nécessaire)<br></label>
-								<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+								<label>Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
+									<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+								</label>
 								<button aria-label="Envoi du formulaire"
 									class="bloc-button btn-d btn-lg btn-block cta-hero btn-atomic-tangerine"
 									type="submit">
