--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -149,8 +149,6 @@
 		<!-- Footer - bloc-8 -->
 		<article class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
-				<!-- <div class="row">
-					<div class="col-sm-12"> -->
 				<h4 class="text-center black">
 					La chouette agence - Agence web basée à Lyon.<br>
 				</h4>
@@ -166,11 +164,11 @@
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								
+
 								<a aria-label="Facebook" class="social" href="#">
 									<i class="fab fa-facebook-f icon-md black"></i>
 									<!-- <span class="fa fa-facebook icon-md black"></span> -->
-									</a>
+								</a>
 							</div>
 						</div>
 						<div class="col-sm-3">
@@ -189,16 +187,15 @@
 								</a>
 							</div>
 						</div>
+
+						<!-- ScrollToTop Button -->
+						<a aria-label="Haut de page" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')">
+							<i class="fas fa-chevron-up icon-md black"></i>
+							<!-- <span class="fas fa-chevron-up"></span> -->
+						</a>
+						<!-- ScrollToTop Button END-->
 					</div>
-					<!-- ScrollToTop Button -->
-					<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')">
-						<i class="fas fa-chevron-double-up"></i>
-						<!-- <span class="fa fa-chevron-up"></span> -->
-					</a>
-					<!-- ScrollToTop Button END-->
 				</div>
-				<!--</div>
-				</div> -->
 			</div>
 		</article>
 		<!-- Footer - bloc-8 END -->
