--- Auto-Git Commit ---

--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -189,10 +189,10 @@
 						</div>
 
 						<!-- ScrollToTop Button -->
-						<a aria-label="Haut de page" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')">
+						<div aria-label="Haut de page" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')">
 							<i class="fas fa-chevron-up icon-md black"></i>
 							<!-- <span class="fas fa-chevron-up"></span> -->
-						</a>
+						</div>
 						<!-- ScrollToTop Button END-->
 					</div>
 				</div>
