--- Auto-Git Commit ---

--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -187,14 +187,15 @@
 								</a>
 							</div>
 						</div>
-
-						<!-- ScrollToTop Button -->
-						<div aria-label="Haut de page" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')">
-							<i class="fas fa-chevron-up icon-md black"></i>
-							<!-- <span class="fas fa-chevron-up"></span> -->
-						</div>
-						<!-- ScrollToTop Button END-->
 					</div>
+					<!-- scrolltotop Button -->
+					<div onclick="scrollToTarget('1')">
+						<a aria-label="Haut de page" class="social" href="#">
+							<i class="fas fa-chevron-up scrolltotop icon-md black"></i>
+						</a>
+						<!-- <span class="fas fa-chevron-up"></span> -->
+					</div>
+					<!-- scrolltotop Button END-->
 				</div>
 			</div>
 		</article>
