--- Auto-Git Commit ---

--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -79,7 +79,7 @@
 			<div class="container">
 				<div class="row">
 					<!-- <div class="col-sm-12"> -->
-					<h1 class="text-center hero-bloc-text black-25">
+					<h1 class="text-center hero-bloc-text black">
 						Parlons web design !
 					</h1>
 					<h2 class="text-center black-20">
