--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<div class="container bloc-sm">
 				<div class="navbar row">
 					<nav class="navbar-header">
-						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
+						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.avif"
 								alt="logo agence" height="40" /></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
