--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" 
 		integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> -->
-	<script src="https://kit.fontawesome.com/5de27bfde3.js" crossorigin="anonymous"></script>
+	<script async src="https://kit.fontawesome.com/5de27bfde3.js" crossorigin="anonymous"></script>
 	
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Chouette agence - Entreprise de développement web à lyon.</title>
