--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
 				</div>
 				<article class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/1.avif" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-								src="img/1.jpg" alt="refonte site journal local"
+								src="img/1.avif" alt="refonte site journal local"
 								class="img-responsive portfolio-thumb" /></a>
 						<h3 class="text-center">
 							Refonte d'un site web pour un journal local
@@ -213,9 +213,9 @@
 						</h4>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/2.avif" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
-								src="img/2.jpg" class="img-responsive portfolio-thumb"
+								src="img/2.avif" class="img-responsive portfolio-thumb"
 								alt="site web pour photographes" /></a>
 						<h3 class="text-center">
 							Création d'un site web pour photographes
@@ -227,9 +227,9 @@
 				</article>
 				<article class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/3.avif" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
-								src="img/3.jpg" class="img-responsive portfolio-thumb"
+								src="img/3.avif" class="img-responsive portfolio-thumb"
 								alt="Site web pour voyageur" /></a>
 						<h3 class="text-center">
 							Création d'un site internet pour un voyageur
@@ -240,9 +240,9 @@
 						</h4>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/4.avif" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
-								src="img/4.jpg" class="img-responsive portfolio-thumb"
+								src="img/4.avif" class="img-responsive portfolio-thumb"
 								alt="Site web pour agence de mariage" /></a>
 						<h3 class="text-center">
 							Conception d'un site pour une agence de mariage
