logo.png -> avif

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="Texte-entete">
-						<img src="img/logo.png" class="center-block image-resize-mode" width="100"
+						<img src="img/logo.avif" class="center-block image-resize-mode" width="100"
 							alt="Logo 2 La chouette agence" />
 						<h1 class="text-center hero-bloc-text tc-yellow ">
 							La chouette agence.
